# vocoder

./: .gitignore  CHANGELOG.md  CLAUDE-optiona.MD  CLAUDE-optionb.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README-OPTION-A.md  README-OPTION-B.md  README.md  install.sh  prompta.txt  promptb.txt  pyproject.toml  requirements-optionb.txt  test-vocoder.sh
PRPs/: vocoder-debugging-fix.md  vocoder-dockerization-documentation.md  vocoder-option-a.md  vocoder-option-b-updated.md  vocoder-option-b.md
config/: vocoder.yaml
daemon/: vocoder.service
docs/: audio-debugging-guide.md  audio-quick-fixes.md
docs/developer-guide/: architecture.md  development.md  systemd-service.md
docs/user-guide/: configuration.md  quick-start.md  troubleshooting.md
scripts/: check-model.sh  check-status.sh  debug-audio.sh  debug-transcribe.sh  diagnose-audio-issues.py  gnome_hotkey.sh  install-deps.sh  release.sh  setup-keybinding.sh  setup-option-b.sh  setup-venv.sh  start-whisper.sh  start-ydotoold.sh  test-dictate.sh  test-multiple.sh  test-option-b.sh  whisper-dictate-clipboard.sh  whisper-dictate.sh
systemd/user/: vocoder.service
